feat: add index layout

--- a/bwin/index.html
+++ b/bwin/index.html
@@ -16,6 +16,141 @@
 </head>
 
 <body>
+    <div class="page-wrapper page-wrapper__overlay">
+        <header class="header">
+            <div class="header__container container">
+                <a class="header__logo" href="/">
+                    <img class="logo" src="./assets/images/logo.svg" alt="Логотип bwin.ru">
+                </a>
+            </div>
+        </header>
+        <main class="main">
+            <h1 class="visually-hidden">
+                Букмекерская контора Bwin
+            </h1>
+            <section class="promo">
+                <h2 class="visually-hidden">
+                    Информация о ставках
+                </h2>
+                <div class="promo__container container">
+                    <div class="promo__content">
+                        <em class="promo__text--bold">
+                            <span class="promo__text--yellow">100%</span> 
+                            <span class="promo__text--white promo__text--white-l">страховка</span>
+                            <span class="promo__text--white promo__text--white-m">первой ставки</span>
+                        </em>
+                        <p class="promo__text promo__text--m">
+                            Cтань клиентом bwin и получи фрибет
+                        </p>
+                        <p class="promo__text promo__text--s">
+                            На сумму первой ставки, если она не сыграет
+                        </p>
+                        <button class="promo__btn play__button">
+                            Играть без риска
+                        </button>
+                    </div>
+                    <div class="promo__image">
+                        <img src="./assets/images/player.png" alt="Игрок bwin.ru">
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="footer__container container">
+                <ul class="social__list">
+                    <li class="social__item">
+                        <a class="social__link social__link--apple" href="https://www.apple.com/ru/app-store/" target="_blank" rel="noopener noreferrer" aria-label="Лого App Store"></a>
+                    </li>
+                    <li class="social__item">
+                        <a class="social__link social__link--google" href="https://play.google.com/" target="_blank" rel="noopener noreferrer" aria-label="Лого Google Play"></a>
+                    </li>
+                </ul>
+                <a class="rule__link" href="#">Правила и условия</a>
+                <ul class="football-team__list">
+                    <li class="football-team__item">
+                        <a class="football-team__link football-team__link--atletico" href="#" target="_blank" rel="noopener noreferrer" aria-label="Лого Атлетико Мадрид"></a>
+                    </li>
+                    <li class="football-team__item">
+                        <a class="football-team__link football-team__link--borussia" href="#" target="_blank" rel="noopener noreferrer" aria-label="Лого Боруссия Дортмунд"></a>
+                    </li>
+                    <li class="football-team__item">
+                        <a class="football-team__link football-team__link--inter" href="#" target="_blank" rel="noopener noreferrer" aria-label="Лого Интер"></a>
+                    </li>
+                    <li class="football-team__item">
+                        <a class="football-team__link football-team__link--valencia" href="#" target="_blank" rel="noopener noreferrer" aria-label="Лого Валенсия"></a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+    <section class="modal modal--close" data-simplebar>
+        <div class="modal__container">
+            <button class="modal__btn--exit">
+                <span class="visually-hidden">
+                    Закрыть модальное окно
+                </span>
+            </button>
+            <div class="modal__item modal__item--rules">
+                <h3 class="modal__title">
+                    Правила и условия
+                </h3>
+                <p>
+                    Букмекерская контора Bwin предлагает всем своим новым клиентам беспроигрышную сделку. Если ваша первая ставка на сайте букмекера окажется неудачной, компания вернет проигранную сумму в полном объеме в качестве фрибета. Этот бонус можно использовать для
+                    заключения нового пари, чистый выигрыш с которого достанется вам. Правда, у кэшбека Bwin есть ограничение – максимальная сумма, которую готов компенсировать букмекер, равна 2000 рублей.
+                </p>
+            </div>
+            <div class="modal__item modal__item--how-it-works">
+                <h3 class="modal__title">Как это работает</h3>
+                <ul class="modal__list">
+                    <li class="modal__list-item">
+                        <p>
+                            Вы регистрируетесь на сайте БК Bwin и проходите процедуру идентификации личности
+                        </p>
+                    </li>
+                    <li class="modal__list-item">
+                        <p>
+                            Делаете первую ставку на реальные деньги
+                        </p>
+                    </li>
+                    <li class="modal__list-item">
+                        <p>
+                            Если проигрываете, получаете свои деньги назад в течение 30 минут с момента расчета
+                        </p>
+                    </li>
+                    <li class="modal__list-item">
+                        <p>
+                            Условия акции распространяются на все типы пари, кроме «суперкоэффициентов» и «комбо+»
+                        </p>
+                    </li>
+                    <li class="modal__list-item">
+                        <p>
+                            Полученный фрибет нужно использовать в течение 7 дней с момента его предоставления
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="modal__item modal__item--imp-rules">
+                <h3 class="modal__title">Важные правила</h3>
+                <ul class="modal__list">
+                    <li class="modal__list-item">
+                        <p>
+                            В акции могут участвовать только новые пользователи или пользователи, которые до этого не делали ни одной ставки
+                        </p>
+                    </li>
+                    <li class="modal__list-item">
+                        <p>
+                            Фрибет можно использовать только в мобильных приложениях Bwin для iOS и Android
+                        </p>
+                    </li>
+                    <li class="modal__list-item">
+                        <p>
+                            Один игрок может получить только один фрибет
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <!-- simplebar -->
     <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
     <!-- main js -->
