styles: add modal styles

--- a/bwin/index.html
+++ b/bwin/index.html
@@ -83,7 +83,7 @@
             </div>
         </footer>
     </div>
-    <section class="modal modal--close" data-simplebar>
+    <section class="modal modal--open" data-simplebar>
         <div class="modal__container">
             <button class="modal__btn--exit">
                 <span class="visually-hidden">
