--- a/bwin/index.html
+++ b/bwin/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css" />
     <!-- main styles -->
     <link rel="stylesheet" href="style.css">
+    <!-- media styles -->
+    <link rel="stylesheet" href="media.css">
 </head>
 
 <body>
