--- a/follow_the_road/index.html
+++ b/follow_the_road/index.html
@@ -22,8 +22,8 @@
         <div class="bg col-12">
             <div class="road col-12">
                 <svg xmlns="http://www.w3.org/2000/svg" width="375" height="812" viewBox="0 0 99.219 214.842" style="opacity:0; position:absolute;">
-                        <path id="path" d="M39.581 214.842L40.318 0" fill="none" stroke="#000" stroke-width=".265"/>
-                    </svg>
+                    <path id="path" d="M 39 225 L 25 199 L 22 181 L 23 163 L 24 150 L 30 132 L 36 123 L 45 115 L 53 109 L 61 103 L 66 97 L 71 87 L 72 81 L 71 71 L 65 65 L 58 59 L 47 55 L 37 49 L 29 45 L 21 38 L 16 34 L 9 25 L 4 17 L -1 9 L -6 0 L -10 -9 L -17 -21 L -27 -32" fill="none" stroke="#000" stroke-width=".265"/>
+                </svg>
                 <img src="img/road.svg">
             </div>
         </div>
