fix:  uncomment snow js

--- a/follow_the_road/index.html
+++ b/follow_the_road/index.html
@@ -11,7 +11,7 @@
     <script src="js/MotionPathPlugin.min.js"></script>
     <title>Follow The Road</title>
     <script src="js/script.js"></script>
-    <!-- <script src="js/snow.js"></script> -->
+    <script src="js/snow.js"></script>
 </head>
 
 <body>
